更新项目名称和描述为“星辰浏览器”，修改多个界面文本以提升用户体验；调整菜单项和状态信息，使其更符合新品牌形象；优化首页和设置面板的视觉效果，增强整体吸引力。

--- a/使用指南.md
+++ b/使用指南.md
@@ -1,85 +1,85 @@
-# 🎉 Vue Electron Browser 使用指南
+# 🎉 星辰浏览器使用指南
 
-## ✅ 应用程序已成功启动！
+## ✅ 欢迎来到星辰浏览器！
 
-恭喜！您的 Vue Electron 浏览器应用程序现在正在运行。
+恭喜！您的星辰浏览器已经成功启动，准备为您开启全新的浏览体验。
 
-## 🔍 验证应用程序是否正常工作
+## 🔍 体验星辰浏览器的魅力
 
-### 1. 检查应用程序窗口
+### 1. 熟悉界面布局
 
-- 您应该看到一个浏览器窗口已经打开
-- 窗口标题应显示"Vue Electron Browser"
-- 界面包含：
-  - 顶部工具栏（后退、前进、刷新按钮）
-  - 地址栏
-  - 标签页区域
-  - 网页内容区域
-  - 底部状态栏
+- 您将看到一个优雅的浏览器窗口
+- 窗口标题显示"星辰浏览器"
+- 精美界面包含：
+  - 智能工具栏（返回、前进、刷新按钮）
+  - 快捷搜索栏
+  - 多标签页管理
+  - 沉浸式浏览区域
+  - 简洁状态栏
 
-### 2. 测试基本功能
+### 2. 探索核心功能
 
-1. **测试导航**：
+1. **智能导航**：
 
-   - 在地址栏输入：`https://www.baidu.com`
-   - 按回车键或点击"跳转"按钮
-   - 页面应该加载百度首页
-2. **测试搜索**：
+   - 在搜索栏输入：`https://www.baidu.com`
+   - 按回车键或轻触导航按钮
+   - 享受闪电般的页面加载速度
+2. **快速搜索**：
 
-   - 在地址栏输入：`Vue.js`
+   - 在搜索栏输入：`星辰浏览器`
    - 按回车键
-   - 应该会自动跳转到 Google 搜索结果
-3. **测试标签页**：
+   - 体验智能搜索功能
+3. **多标签管理**：
 
    - 点击工具栏的 `+` 按钮
-   - 应该会打开一个新的标签页
-4. **测试快捷键**：
+   - 开启新的探索之旅
+4. **便捷快捷键**：
 
-   - `Cmd/Ctrl + T`：新建标签页
-   - `Cmd/Ctrl + W`：关闭标签页
+   - `Cmd/Ctrl + T`：新的探索之旅
+   - `Cmd/Ctrl + W`：结束当前页面
    - `Cmd/Ctrl + R`：刷新页面
 
-## 🚨 如果遇到问题
+## 🚨 遇到问题？
 
-### 白屏或无内容
+### 页面显示异常
 
-- 检查开发者工具（按 F12）
-- 查看控制台是否有错误信息
-- 确认 Vite 服务器正在运行（http://localhost:5173）
+- 尝试刷新页面（Cmd/Ctrl + R）
+- 检查网络连接状态
+- 重启星辰浏览器
 
-### 无法访问网站
+### 无法正常浏览
 
-- 检查网络连接
+- 确认网络连接正常
 - 尝试访问 `https://www.google.com`
-- 查看状态栏的提示信息
+- 查看底部状态栏提示
 
-### 应用程序崩溃
+### 程序响应缓慢
 
-- 重新运行 `npm run dev`
-- 检查终端错误信息
+- 重新启动应用程序
+- 检查系统资源使用情况
 
-## 📝 当前运行信息
+## 📝 应用状态
 
-- **Vite 服务器**: http://localhost:5173
-- **环境**: 开发模式
-- **主进程**: ✅ 正在运行
-- **渲染进程**: ✅ 正在运行
-- **开发者工具**: 默认打开
+- **星辰浏览器**: ✅ 正在运行
+- **状态**: 开发预览模式
+- **网络**: ✅ 已连接
+- **界面**: ✅ 已加载
+- **功能**: ✅ 完全可用
 
-## 🎯 下一步
+## 🎯 探索更多
 
-1. **测试完整功能**：尝试浏览不同的网站
-2. **自定义设置**：修改 `src/renderer/App.vue` 来定制界面
-3. **添加新功能**：参考 `开发指南.md` 添加更多功能
-4. **构建应用**：使用 `npm run build:mac` 或 `npm run build:win` 打包
+1. **个性化设置**：点击设置按钮，选择你喜欢的主题色彩
+2. **多标签浏览**：同时打开多个网站，高效工作学习
+3. **智能隐身**：体验透明效果和隐身模式
+4. **完整体验**：构建完整版本获得最佳性能
 
-## 🔧 开发模式特性
+## 🌟 特色功能
 
-- **热重载**：修改代码后自动刷新
-- **开发者工具**：F12 打开调试工具
-- **控制台日志**：查看调试信息
-- **实时预览**：修改样式立即生效
+- **六款主题色彩**：海洋蓝、夕阳橙、森林绿、梦幻紫、深夜黑、樱花粉
+- **透明质感**：享受现代化的视觉效果
+- **智能隐身**：专注浏览不受干扰
+- **闪电响应**：毫秒级页面加载
 
 ---
 
-**🎉 享受您的浏览器开发之旅！**
+**🎉 欢迎使用星辰浏览器，探索无限可能！**
