更新项目名称为“鸡米花浏览器”，修改相关文档和界面文本以反映新品牌形象；调整图标和描述，提升整体用户体验和视觉效果。

--- a/使用指南.md
+++ b/使用指南.md
@@ -1,15 +1,15 @@
-# 🎉 星辰浏览器使用指南
+# 🎉 鸡米花浏览器使用指南
 
-## ✅ 欢迎来到星辰浏览器！
+## ✅ 欢迎来到鸡米花浏览器！
 
-恭喜！您的星辰浏览器已经成功启动，准备为您开启全新的浏览体验。
+恭喜！您的鸡米花浏览器已经成功启动，准备为您开启全新的浏览体验。
 
-## 🔍 体验星辰浏览器的魅力
+## 🔍 体验鸡米花浏览器的魅力
 
 ### 1. 熟悉界面布局
 
 - 您将看到一个优雅的浏览器窗口
-- 窗口标题显示"星辰浏览器"
+- 窗口标题显示"鸡米花浏览器"
 - 精美界面包含：
   - 智能工具栏（返回、前进、刷新按钮）
   - 快捷搜索栏
@@ -26,7 +26,7 @@
    - 享受闪电般的页面加载速度
 2. **快速搜索**：
 
-   - 在搜索栏输入：`星辰浏览器`
+   - 在搜索栏输入：`鸡米花浏览器`
    - 按回车键
    - 体验智能搜索功能
 3. **多标签管理**：
@@ -45,7 +45,7 @@
 
 - 尝试刷新页面（Cmd/Ctrl + R）
 - 检查网络连接状态
-- 重启星辰浏览器
+- 重启鸡米花浏览器
 
 ### 无法正常浏览
 
@@ -60,7 +60,7 @@
 
 ## 📝 应用状态
 
-- **星辰浏览器**: ✅ 正在运行
+- **鸡米花浏览器**: ✅ 正在运行
 - **状态**: 开发预览模式
 - **网络**: ✅ 已连接
 - **界面**: ✅ 已加载
@@ -82,4 +82,4 @@
 
 ---
 
-**🎉 欢迎使用星辰浏览器，探索无限可能！**
+**🎉 欢迎使用鸡米花浏览器，探索无限可能！**
